# sovereign-intelligence-observatory

./: .gitignore  ARCHITECTURAL_ALIGNMENT.md  README.md  conftest.py  integration  pyproject.toml  run_tests.sh
agent-recipe-compiler/: requirements.txt
agent-recipe-compiler/.sovereignspec/: sovereignspec.yaml
agent-recipe-compiler/src/: __init__.py  api.py  database.py  models.py
agent-recipe-compiler/tests/: __init__.py  conftest.py  test_models.py  test_recipe_api.py
autonomous-evaluation-loop/src/: __init__.py  api.py  database.py  models.py
autonomous-evaluation-loop/tests/: conftest.py  test_eval_loop_api.py
expert-signal-router/src/: __init__.py  api.py  database.py  models.py
expert-signal-router/tests/: conftest.py  test_signal_router_api.py
intelligence-observatory/src/: __init__.py  api.py  archive.py  dashboard.py  database.py  models.py  telemetry.py
intelligence-observatory/tests/: conftest.py  test_dashboard.py  test_observatory_api.py
shared/: __init__.py  async_db.py  chroma_client.py  config.py  context_condenser.py  federated_sync.py  gbnf.py  ollama_client.py  peer_discovery.py  quantization_drift.py  sandbox.py  wandb_logger.py
sovereign-apprenticeship/src/: __init__.py  api.py  database.py  models.py
sovereign-apprenticeship/tests/: conftest.py  test_apprenticeship_api.py
tacit-judgment-extractor/: __init__.py
tests/: __init__.py  test_circuit_breaker.py  test_concurrency.py  test_end_to_end.py  test_gbnf.py  test_ledger_security.py  test_resource_optimization.py  test_security.py  test_shared_infrastructure.py
(+8 files in other folders)
